# gabru-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  PIPELINE_PLAN.md  PRESENTATION.md  QA_COVERAGE_REPORT.md  README.md  cli-config.yaml.example  gabru  gabru_constants.py  gabru_logging.py  gabru_state.py  gabru_time.py  mcp_serve.py  model_tools.py  orchestrator.py  presentation-content.md  pyproject.toml  run_agent.py  setup-gabru.sh  toolsets.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: ci.yml
agent/: auxiliary_client.py  context_compressor.py  context_engine.py  context_references.py  credential_pool.py  credential_sources.py  display.py  file_safety.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  prompt_builder.py  redact.py  shell_hooks.py  skill_commands.py  skill_utils.py  usage_pricing.py
agents/: __init__.py  coder.py  hunter.py  tester.py
assets/: README.md
demo_sandbox/: mcp_smoke.py  test_utils.py  utils.py
docs/: 01-vision-and-business.md  02-architecture.md  03-agent-pipeline.md  04-tooling-and-mcp.md  05-decisions.md  06-qa-and-demo.md  07-roadmap.md  _render_debug.py  architecture.excalidraw
gabru_cli/: __init__.py  auth.py  callbacks.py  codex_models.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  default_soul.py  env_loader.py  main.py  models.py  providers.py  timeouts.py
scripts/: gabru_qa.py  install.sh  mcp_e2e.py  mcp_qa.py  run_tests.sh
scripts/lib/: node-bootstrap.sh
tests/: conftest.py  test_ctx_halving_fix.py  test_empty_model_fallback.py  test_gabru_constants.py  test_gabru_logging.py  test_gabru_state.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_model_tools.py  test_model_tools_async_bridge.py  test_packaging_metadata.py  test_plugin_skills.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_transform_tool_result_hook.py  test_utils_truthy_values.py
tests/agent/: test_auxiliary_client.py  test_auxiliary_config_bridge.py  test_auxiliary_main_first.py  test_auxiliary_named_custom_providers.py  test_bedrock_adapter.py  test_bedrock_integration.py  test_codex_cloudflare_headers.py  test_context_compressor.py  test_context_engine.py  test_context_references.py  test_copilot_acp_client.py  test_credential_pool.py  test_credential_pool_routing.py  test_crossloop_client_cache.py  test_display.py  test_display_emoji.py  test_error_classifier.py  test_external_skills.py  test_gemini_cloudcode.py  (+19 more)
tools/: __init__.py  approval.py  budget_config.py  checkpoint_manager.py  clarify_tool.py  code_execution_tool.py  credential_files.py  debug_helpers.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  fuzzy_match.py  interrupt.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  mixture_of_agents_tool.py  openrouter_client.py  osv_check.py  patch_parser.py  pipeline_tool.py  process_registry.py  registry.py  rl_training_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  todo_tool.py  tool_backend_helpers.py  tool_result_storage.py  url_safety.py  web_tools.py  (+1 more)
(+321 files in other folders)
