[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gabru-agent"
version = "0.1.0"
description = "Gabru-Agent - Generative Agent for Build, Review & Unit-test"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
  # Placeholder — finalized in Phase C1
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "pytest-xdist>=3.0,<4", "ruff>=0.6,<1"]

[project.scripts]
gabru = "gabru_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, network)",
]
addopts = "-m 'not integration' -n auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
